--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello World</h1>
     <p>Este es mi portfolio personal.</p>
+    <a href="./webAppEnBlanc">Carpeta vinculada </a>
 </body>
 </html>
