--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello World</h1>
     <p>Este es mi portfolio personal.</p>
-    <a href="../webAppEnBlanc/index.html"> Carpeta vinculada </a>
+    <a href="../webAppEnBlanc/index.html"> Ver programas </a>
 </body>
 </html>
