--- a/webAppEnBlanc/index.html
+++ b/webAppEnBlanc/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nara Jimenez</title>
+    <title>Nara Jimenez - Programas</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Página principal de la webApp amb DOM, layout i componentes de la webApp.</p>
+    <h1>Portfolio de Programas</h1>
+    <!--<p>Página principal de la webApp amb DOM, layout y componentes de la webApp.</p>-->
+    <p>Estos son los programas realizados en la asignatura de Desarrollo Web Entorno Cliente</p>
 </body>
 </html>
