--- a/webAppEnBlanc/index.html
+++ b/webAppEnBlanc/index.html
@@ -10,6 +10,17 @@
     <h1>Portfolio de Programas</h1>
     <!--<p>Página principal de la webApp amb DOM, layout y componentes de la webApp.</p>-->
     <p>Estos son los programas realizados en la asignatura de Desarrollo Web Entorno Cliente</p>
+    <p>Estructuras para guardar información</p>
+    <button> <a href=""></a> Ver</button>
+    <br>
+    <p>Interacción entre sistemas</p>
+    <button> <a href=""></a> Ver</button>
+    <br>
+    <p>Programación estructurada</p>
+    <button> <a href=""></a> Ver</button>
+    <br>
+    <p>Objectos del Sistema</p>
+    <button> <a href=""></a> Ver</button>
     
     
 </body>
