--- a/webAppEnBlanc/Ejercicio2.html
+++ b/webAppEnBlanc/Ejercicio2.html
@@ -95,7 +95,7 @@
         <!-- Volver a index.html-->
         <section class="content-section  text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <a class="btn btn-xl btn-dark me-4" href="/webAppEnBlanc/index.html">Volver</a>
+                <a class="btn btn-xl btn-dark me-4" href="/index.html">Volver</a>
             </div>
         </section>
         
