--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <div class="h3">Entono de Programación</div> 
                                 </div>
                             </div>
-                            <img class="img-fluid" src="media/img/portfolio-1.jpg" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo1.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -115,7 +115,7 @@
                                     <div class="h3">Introducción a la Programación Web</div>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="media/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo2.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -125,7 +125,7 @@
                                     <div class="h3">Objetos de JavaScript</div> 
                                 </div>
                             </div>
-                            <img class="img-fluid" src="media/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo2.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -135,7 +135,7 @@
                                     <div class="h3">Objetos Propios</div> 
                                 </div>
                             </div>
-                            <img class="img-fluid" src="media/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo1.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -145,7 +145,7 @@
                                     <div class="h3">Eventos en JavaScript</div>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="media/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo1.png" alt="..." />
                         </a>
                     </div>
                 </div>
