--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <div class="h3">Entono de Programación</div> 
                                 </div>
                             </div>
-                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo1.png" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/chess.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -115,7 +115,7 @@
                                     <div class="h3">Introducción a la Programación Web</div>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo2.png" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/chess.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -125,7 +125,7 @@
                                     <div class="h3">Objetos de JavaScript</div> 
                                 </div>
                             </div>
-                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo2.png" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/chess.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -135,7 +135,7 @@
                                     <div class="h3">Objetos Propios</div> 
                                 </div>
                             </div>
-                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo1.png" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/chess.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -145,7 +145,7 @@
                                     <div class="h3">Eventos en JavaScript</div>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="/webAppEnBlanc/media/img/fondo1.png" alt="..." />
+                            <img class="img-fluid" src="/webAppEnBlanc/media/img/chess.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -166,6 +166,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/webAppEnBlanc/js/scripts.js"></script>
     </body>
 </html>
