--- a/Actividades.html
+++ b/Actividades.html
@@ -59,6 +59,9 @@
     <!--Galeria de animacion Typed.js-->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
+    <!--Audio-->
+    <audio id="myAudio" src="./music/Bike.wav" preload="auto"></audio>
+
     <!--Script de JS-->
     <script src="/js/script.js"></script>
 </body>
