--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#services">Mis Habilidades</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#video">Video</a>
-            <a href="#contact">Contacto</a>
+            <!--<a href="#contact">Contacto</a>-->
         </nav>
     </header>
 
@@ -45,9 +45,6 @@
             </p>
 
             <div class="social-media">
-                <!--<a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>-->
                 <a href="https://github.com/NaraJimenez"><i class='bx bxl-github'></i></a>
                 <a href="https://www.linkedin.com/in/nara-j-b795551b8/"><i class='bx bxl-linkedin'></i></a>
                 <a href="mailto:narajimenez@gmail.com"><i class='bx bx-envelope'></i></a>
@@ -204,7 +201,7 @@
          
     </section>
 
-    <!--Contacto-->
+    <!--Contacto
     <section class="contact" id="contact">
         <h2 class="heading">Contacta <span>Conmigo!</span></h2>
 
@@ -220,7 +217,7 @@
             <textarea name="" id="" cols="30" rows="10" placeholder="Tu Mensaje"></textarea>
             <input type="submit" value="Enviar Mensaje" class="btn">
         </form>
-    </section>
+    </section>-->
 
     <!--Footer-->
     <footer class="footer">
