--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h2 class="heading">Últimos <span>Proyectos</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="images/prueba.png" alt="">
+                <img src="images/image 1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Laberito en JS</h4>
                     <p>Primer juego dentro del proyecto EcHotel, realizado principalmente con PHP, JavaScript y Mysql.</p>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/prueba.png" alt="">
+                <img src="images/image 2.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Broggi 112</h4>
                     <p>Proyecto en grupo realizado para el Ins Broggi. Pequeña applicación de simulación de la app del 112. Realizado con Laravel 9, Vue 3 y Mysql.</p>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/prueba.png" alt="">
+                <img src="images/image 2.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Pokedex</h4>
                     <p>Primer proyecto creado en PHP, utilizando sesiones y la manipulacion de la Base de Datos, con Mysql.</p>
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/prueba.png" alt="">
+                <img src="images/Captura de pantalla (278) 1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Menu Components</h4>
                     <p>Aplicación realizada con componentes de Vue 3 con JavaScript Vanilla.</p>
@@ -165,16 +165,16 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/prueba.png" alt="">
+                <img src="images/image 2.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>ABP - Larevel 9 y Vue 3</h4>
+                    <h4>ABP - Larevel y Vue</h4>
                     <p>Proyecto creado en PHP, con Apis, Controladores, Modales, Eloquent, Laravel y Vue. Es una pequeña aplicación para gestionar 
                         los cursos y ciclos del Centre D'Estudis Politecnics, se utilizada para ello CRUD.</p>
                     <a href=""><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/prueba.png" alt="">
+                <img src="images/image 2.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Buscador de Ghiphy</h4>
                     <p>Buscador de gifs, realizado a partir de JavaScript y consultas a Api de Ghiphy.</p>
