Subido buscador Giphy

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="portfolio-layer">
                     <h4>Menu Components</h4>
                     <p>Aplicación realizada con componentes de Vue 3 con JavaScript Vanilla.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/NaraJimenez/Nara_Jimenez_WebComponent-Menu"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -174,11 +174,11 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/image 2.png" alt="">
+                <img src="images/image 3.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Buscador de Ghiphy</h4>
-                    <p>Buscador de gifs, realizado a partir de JavaScript y consultas a Api de Ghiphy.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
+                    <h4>Buscador Ghiphy Jsfiddle</h4>
+                    <p>Buscador de gifs, realizado a partir de JavaScript y consultas a Api de Ghiphy. Ejemplo utilizado para la Microponéncia 2.</p>
+                    <a href="https://jsfiddle.net/NaraJimenez/2pzwa6b7/21/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
