Metiendo las Actividades

--- a/M06/02.html
+++ b/M06/02.html
@@ -31,6 +31,42 @@
 
     <section class="actividad02">
         <h2 class="heading"><span>02</span> - Introducción a la Programación Web</h2>
+        <br><br><br><br><br>
+        <div>
+            <h1>01 - Estructuras para guardar la información</h1>
+            <br>
+            <div>
+                <h3>Datos Simples</h3>
+                    <script async src="//jsfiddle.net/NaraJimenez/3kba86zj/26/embed/"></script>
+                    <br>
+                    <br>
+                <h3>Datos Complejos</h3>
+                    <script async src="//jsfiddle.net/NaraJimenez/2c89fwqx/7/embed/"></script>
+                    <br>
+                    <br>
+            </div>
+            <h1>02 - Interacción entre sistemas</h1>
+            <br>
+            <div>
+                <h3>innerHTML</h3>
+                    <script async src="//jsfiddle.net/NaraJimenez/2t5n6kc8/9/embed/"></script>
+                    <br>
+                    <br>
+                    <h3>Windows en JS</h3>
+                    <script async src="//jsfiddle.net/NaraJimenez/av28xg9b/30/embed/"></script>
+                    <br>
+                    <br>
+                    <h3>Consola</h3>
+                    <script async src="//jsfiddle.net/NaraJimenez/bgj0rmap/18/embed/"></script>
+                    <br>
+                    <br>
+                    <h3>Ejemplo de Formulario</h3>
+                    <script async src="//jsfiddle.net/NaraJimenez/wLajd8fe/86/embed/"></script>
+                    <br>
+                    <br>
+            </div>
+
+        </div>
     </section>
 
 
