--- a/M06/03.html
+++ b/M06/03.html
@@ -31,6 +31,46 @@
 
     <section class="actividad03">
         <h2 class="heading"><span>03</span> - Objetos de JavaScript</h2>
+        <h1>01 - Objetos del Sistema</h1>
+            <hr>
+            <br>
+            <div>
+                <h3>Métdodos Numéricos</h3>
+                <script async src="//jsfiddle.net/NaraJimenez/quh425y6/56/embed/"></script>
+                <br>
+                <br>
+                <h3>Método String</h3>
+                <script async src="//jsfiddle.net/NaraJimenez/n6xk3eoh/64/embed/"></script>
+                <br>
+                <br>
+                <h3>Métodos Arrays</h3>
+                <script async src="//jsfiddle.net/NaraJimenez/tprm1dhg/79/embed/"></script>
+                <br>
+                <br>
+                <h3>Ejemplo SET</h3>
+                <script async src="//jsfiddle.net/NaraJimenez/j4L56fzp/68/embed/"></script>
+                <br>
+                <br>
+                <h3>Ejemplo GET</h3>
+                <script async src="//jsfiddle.net/NaraJimenez/Lqm9djef/54/embed/"></script>
+                <br>
+                <br>
+                <h3>Ejercicio Final</h3>
+                <script async src="//jsfiddle.net/NaraJimenez/cuwafk4p/46/embed/"></script>
+                <br>
+                <br>
+            </div>
+            
+            <h1>02 - Persistència de la información en local</h1>
+            <hr>
+            <br>
+            <div>
+                <h3>Guarda y Recupera Cookie</h3>
+                <script async src="//jsfiddle.net/NaraJimenez/27km3a0b/22/embed/"></script>
+                <br>
+                <br>
+            </div>
+        
     </section>
 
 
