--- a/M06/04.html
+++ b/M06/04.html
@@ -31,6 +31,16 @@
 
     <section class="actividad04">
         <h2 class="heading"><span>04</span> - Objetos Propios</h2>
+        <div>
+            <h1>01 - Programación Modular</h1>
+            <hr>
+            <br>
+
+            <h3>Ejemplos de Callbacks</h3>
+            <script async src="//jsfiddle.net/NaraJimenez/d2hw3rq5/7/embed/"></script>
+            <br>
+            <br>
+        </div>
     </section>
 
 
