--- a/M06/05.html
+++ b/M06/05.html
@@ -31,6 +31,27 @@
 
     <section class="actividad05">
         <h2 class="heading"><span>05</span> - Eventos en JavaScript</h2>
+        <h1>01 - Reacciones a Eventos</h1>
+        <hr>
+        <br>
+        <br>
+
+        <div>
+            <h3>Click Listener</h3>
+            <br>
+            <a class="btn btn-primary" href="./Actividad5/ej1.html" role="button">Probar</a>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div>
+            <h3>Lista de Propositos - To Do List</h3>
+            <br>
+            <a class="btn btn-primary" href="./Actividad5/ej2.html" role="button">Probar</a>
+            <br>
+            <br>
+            <br>
+        </div>
     </section>
 
 
