--- a/M06/06.html
+++ b/M06/06.html
@@ -31,6 +31,10 @@
 
     <section class="actividad06">
         <h2 class="heading"><span>06</span> - El DOM</h2>
+        <br><br><br><br>
+        <div>
+            <script async src="//jsfiddle.net/NaraJimenez/905awkro/192/embed/"></script>
+        </div>
     </section>
 
 
