--- a/M06/07.html
+++ b/M06/07.html
@@ -31,6 +31,9 @@
 
     <section class="actividad07">
         <h2 class="heading"><span>07</span> - Los WebComponents</h2>
+        <div>
+            
+        </div>
     </section>
 
 
