--- a/M06/08.html
+++ b/M06/08.html
@@ -31,6 +31,12 @@
 
     <section class="actividad08">
         <h2 class="heading"><span>08</span> - Las APIs</h2>
+        <br><br><br><br><br>
+        <div>
+            <h1>Aplicacions web connectades a serveis remots - Vanilla JS</h1>
+            <br>
+            <script async src="//jsfiddle.net/NaraJimenez/bxykt1sf/33/embed/"></script>
+        </div>
     </section>
 
 
