--- a/M06/07.html
+++ b/M06/07.html
@@ -31,8 +31,11 @@
 
     <section class="actividad07">
         <h2 class="heading"><span>07</span> - Los WebComponents</h2>
+        <br><br><br><br>
         <div>
-            
+            <h1>Curso Introductorio VUE 3</h1>
+            <br>
+            <script async src="//jsfiddle.net/NaraJimenez/90845f2v/embed/"></script>
         </div>
     </section>
 
