--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 Me gusta tanto el Back-end como el Front-end, además me encanta aprender nuevos lenguajes mientras creo nuevos proyectos.
                 <br>
                 <br>
-                Para saber más sobre mí, visita mis redes sociales ¡Nos vemos!
+                Estas son mis softskills:
             </p>
             <!--<a href="" class="btn">Ver Linkedin</a>-->
             <div class="soft-skills">
