--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="services-box">
                 <i class='bx bx-network-chart' ></i>
                 <h3>Data</h3>
-                <p>LEn conocimiento sobre Data y sus base de datos: MongoDB, mySql, Workbench, PHPMyAdmin</p>
+                <p>Conocimiento sobre Data y sus base de datos: MongoDB, mySql, Workbench, PHPMyAdmin</p>
                     <!--<a href="" class="btn">Read More</a>-->
                     <div id="iconosLeng">
                         <div><i class="bi bi-filetype-sql"></i></div>
