Con video Interactivo

--- a/index.html
+++ b/index.html
@@ -192,11 +192,12 @@
         </div>
         
         <div class="video-content">
-
+            <video src="/video/VideoInteractivo.mp4" id="myvideo" width="640" type="video/mp4"></video>
         </div>
         <div id="botones" style="text-align: center;">
-            <button class="btn" style="margin-right: 20px;">Opcion 1</button>
-            <button class="btn">Opcion 2</button>
+            <button class="btn" style="margin-right: 20px;" id="opUno">Opcion 1</button>
+            <button class="btn" style="margin-right: 20px;" id="playme">Play/Pausa</button>
+            <button class="btn" id="opDos">Opcion 2</button>
         </div>
          
     </section>
