Capturas que faltaba

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/image 2.png" alt="Imagen Pokedex">
+                <img src="images/image 7.png" alt="Imagen Pokedex">
                 <div class="portfolio-layer">
                     <h4>Pokedex</h4>
                     <p>Primer proyecto creado en PHP, utilizando sesiones y la manipulacion de la Base de Datos, con Mysql.</p>
@@ -165,7 +165,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/image 2.png" alt="Imagen Proyecto ABP">
+                <img src="images/Captura de pantalla (1645) 1.png alt="Imagen Proyecto ABP">
                 <div class="portfolio-layer">
                     <h4>ABP - Larevel y Vue</h4>
                     <p>Proyecto creado en PHP, con Apis, Controladores, Modales, Eloquent, Laravel y Vue. Es una pequeña aplicación para gestionar 
