--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <img src="images/image 2.png" alt="Imagen Broggi112">
                 <div class="portfolio-layer">
                     <h4>Broggi 112</h4>
-                    <p>Proyecto en grupo realizado para el Ins Broggi. Pequeña applicación de simulación de la app del 112. Realizado con Laravel 9, Vue 3 y Mysql.</p>
+                    <p>Proyecto en grupo realizado para el Ins Broggi. Realizado con Laravel 9, Vue 3 y Mysql.</p>
                     <a href="https://github.com/NaraJimenez/Broggi112"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -165,11 +165,10 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/Captura de pantalla (1645) 1.png alt="Imagen Proyecto ABP">
+                <img src="images/Captura de pantalla (1645) 1.png"  alt="Imagen Proyecto ABP">
                 <div class="portfolio-layer">
                     <h4>ABP - Larevel y Vue</h4>
-                    <p>Proyecto creado en PHP, con Apis, Controladores, Modales, Eloquent, Laravel y Vue. Es una pequeña aplicación para gestionar 
-                        los cursos y ciclos del Centre D'Estudis Politecnics, se utilizada para ello CRUD.</p>
+                    <p>Proyecto creado en PHP, con Apis, Controladores, Modales, Eloquent, Laravel y Vue.</p>
                     <a href=""><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
