--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
                 <img src="images/image 7.png" alt="Imagen Pokedex">
                 <div class="portfolio-layer">
                     <h4>Pokedex</h4>
-                    <p>Primer proyecto creado en PHP, utilizando sesiones y la manipulacion de la Base de Datos, con Mysql.</p>
+                    <p>Primer proyecto creado en PHP, sesiones y Base de Datos, con Mysql.</p>
                     <a href=""><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="images/Captura de pantalla (278) 1.png" alt="Imagen menu">
                 <div class="portfolio-layer">
-                    <h4>Menu Components</h4>
+                    <h4>MenuComponent</h4>
                     <p>Aplicación realizada con componentes de Vue 3 con JavaScript Vanilla.</p>
                     <a href="https://github.com/NaraJimenez/Nara_Jimenez_WebComponent-Menu"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -167,7 +167,7 @@
             <div class="portfolio-box">
                 <img src="images/Captura de pantalla (1645) 1.png"  alt="Imagen Proyecto ABP">
                 <div class="portfolio-layer">
-                    <h4>ABP - Larevel y Vue</h4>
+                    <h4>ABP Larevel+Vue</h4>
                     <p>Proyecto creado en PHP, con Apis, Controladores, Modales, Eloquent, Laravel y Vue.</p>
                     <a href=""><i class='bx bx-link-external'></i></a>
                 </div>
@@ -175,8 +175,8 @@
             <div class="portfolio-box">
                 <img src="images/image 3.png" alt="Imagen Fiddle">
                 <div class="portfolio-layer">
-                    <h4>Buscador Ghiphy Jsfiddle</h4>
-                    <p>Buscador de gifs, realizado a partir de JavaScript y consultas a Api de Ghiphy. Ejemplo utilizado para la Microponéncia 2.</p>
+                    <h4>Buscador Ghiphy</h4>
+                    <p>Buscador de gifs, realizado a partir de JavaScript y consultas a Api de Ghiphy.</p>
                     <a href="https://jsfiddle.net/NaraJimenez/2pzwa6b7/21/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
