Retocados detalles de index

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         <h2 class="heading">Video <span>Interactivo</span></h2>
         <div>
             <h1 style="text-align: center;">¡Video Interactivo  realizado con JavaScript escoge a partir de que punto quieres verlo!</h1> 
+            <br><br>
         </div>
         
         <div class="video-content">
@@ -195,7 +196,7 @@
         </div>
         <div id="botones" style="text-align: center;">
             <button class="btn" style="margin-right: 20px;" id="opUno">Opcion 1</button>
-            <button class="btn" style="margin-right: 20px;" id="playme">Play/Pausa</button>
+            <button class="btn" style="margin-right: 20px;" id="playme"><i class='bx bx-play'></i>/<i class='bx bx-pause' ></i></button>
             <button class="btn" id="opDos">Opcion 2</button>
         </div>
          
