Retocado index - enlace a minijuego

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="portfolio-layer">
                     <h4>Laberito en JS</h4>
                     <p>Primer juego dentro del proyecto EcHotel, realizado principalmente con PHP, JavaScript y Mysql.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/NaraJimenez/Minijuego"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
