--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://www.linkedin.com/in/nara-j-b795551b8/"><i class='bx bxl-linkedin'></i></a>
                 <a href="mailto:narajimenez@gmail.com"><i class='bx bx-envelope'></i></a>
             </div>
-            <a href="ruta-del-archivo/mi-cv.pdf" class="btn" download  onclick="playSound()">Descarga CV</a>
+            <a href="./cv/Nara Jimenez  - CV (English).pdf" class="btn" download  onclick="playSound()">Descarga CV</a>
         </div>
 
         <div class="home-img">
