--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="portfolio-layer">
                     <h4>Pokedex</h4>
                     <p>Primer proyecto creado en PHP, sesiones y Base de Datos, con Mysql.</p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/NaraJimenez/Pokedex"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
