Añadido boton inicio y retocado la actividad 5.1

--- a/M06/Actividad5/ej1.html
+++ b/M06/Actividad5/ej1.html
@@ -30,12 +30,15 @@
     </header>
 
     <section class="actividad01">
-        <h2 class="heading"><span>01</span> - Entorno de Programación</h2>
+        <h2 class="heading"><span>05</span> - Actividad 1.1</h2>
         <br><br><br><br><br>
         <div>
-            <h1>01 - Gestió Documental i estàndards</h1>
+            <h1>Click Listener</h1>
             <br>
-            <script async src="//jsfiddle.net/NaraJimenez/eu3yjkwp/57/embed/"></script>
+            <p>Clica uno de los dos elementos para poder observar como funciona un Evento</p>
+                        
+                        <img src="/images/gota.svg" alt="gota" id="gota" class="">
+                        <input type="button" value="button" id="button"  class="btn btn-primary btn-xl" >
         </div>
     </section>
 
@@ -59,6 +62,6 @@
 
     <!--Script de JS-->
     <script src="/js/script.js"></script>
-    <script src="/js/js2.js"></script>
+    <script src="/js/js1.js"></script>
 </body>
 </html>
