--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
     <!--Portfolio-->
     <section class="portfolio" id="portfolio">
         <h2 class="heading">Últimos <span>Proyectos</span></h2>
+        <div>
+            <h1 style="text-align: center;">¡Para ver el código de los proyectos en Github clica al boton gris!</h1>
+        </div>
+        
+        <br>
         <div class="portfolio-container">
             <div class="portfolio-box">
                 <img src="images/image 1.png" alt="Imagen Juego Laberinto">
@@ -197,6 +202,7 @@
         </div>
         <div id="botones" style="text-align: center;">
             <button class="btn" style="margin-right: 20px;" id="opUno">Opcion 1</button>
+            <button class="btn" style="margin-right: 20px;" id="inicio">Inicio</button>
             <button class="btn" style="margin-right: 20px;" id="playme"><i class='bx bx-play'></i>/<i class='bx bx-pause' ></i></button>
             <button class="btn" id="opDos">Opcion 2</button>
         </div>
