--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div><i class='bx bxl-vuejs' ></i></div>
                         <div><i class='bx bxl-javascript' ></i></div>
                     </div>
-                    <a href="./Actividades.html" class="btn" onclick="playSound()" >Actividades M06</a>
+                    <a href="./Actividades.html" class="btn" onclick="playSound2()" >Actividades M06</a>
             </div>
 
             <div class="services-box">
@@ -132,9 +132,7 @@
     <!--Portfolio-->
     <section class="portfolio" id="portfolio">
         <h2 class="heading">Últimos <span>Proyectos</span></h2>
-        <div>
-            <h1 style="text-align: center;">¡Para ver el código de los proyectos en Github clica al boton gris!</h1>
-        </div>
+        <h1 style="text-align: center;">¡Para ver el código de los proyectos en Github clica al boton gris!</h1>
         
         <br>
         <div class="portfolio-container">
@@ -246,6 +244,7 @@
 
     <!--Audio-->
     <audio id="myAudio" src="./music/Bike.wav" preload="auto"></audio>
+    <audio  id="myAudio2" src="./music/Cook.wav" preload="auto"></audio>
 
     <!--Script de JS-->
     <script src="js/script.js"></script>
