--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
     <!--Portfolio-->
     <section class="portfolio" id="portfolio">
         <h2 class="heading">Últimos <span>Proyectos</span></h2>
-        <h1 style="text-align: center;">¡Para ver el código de los proyectos en Github clica al boton gris!</h1>
-        
-        <br>
+        <div>
+            <h1 style="text-align: center;">¡Para ver el código de los proyectos en Github clica al boton gris!</h1> 
+            <br><br>
+        </div>
         <div class="portfolio-container">
             <div class="portfolio-box">
                 <img src="images/image 1.png" alt="Imagen Juego Laberinto">
