--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div><i class='bx bxl-vuejs' ></i></div>
                         <div><i class='bx bxl-javascript' ></i></div>
                     </div>
-                    <a href="./Actividades.html" class="btn" onclick="playSound2()" >Actividades M06</a>
+                    <a href="./Actividades.html" class="btn" onclick="playSound2(event)" >Actividades M06</a>
             </div>
 
             <div class="services-box">
