--- a/M06/Actividad5/ej1.html
+++ b/M06/Actividad5/ej1.html
@@ -32,19 +32,19 @@
     <section class="actividad01">
         <h2 class="heading"><span>05</span> - Actividad 1.1</h2>
         <br><br><br><br><br>
-        <div>
-            <h1>Click Listener</h1>
+        <div style="text-align: center;">
+            <h1>Click Listener: Clica uno de los dos elementos para poder observar cómo funciona un Evento</h1>
             <br>
-            <p>Clica uno de los dos elementos para poder observar como funciona un Evento</p>
-                        
-                        <img src="/images/gota.svg" alt="gota" id="gota" class="">
-                        <input type="button" value="button" id="button"  class="btn btn-primary btn-xl" >
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <img src="/images/gota.svg" alt="gota" id="gota" class="btn btn-xl" style="margin-right: 10px;">
+                <input type="button" value="button" id="button" class="btn btn-xl">
+            </div>
         </div>
     </section>
 
 
-     <!--Footer-->
-     <footer class="footer">
+    <!--Footer-->
+    <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by Nara Jimenez Martos | All Rights Reserved.</p>
         </div>
