--- a/M06/05.html
+++ b/M06/05.html
@@ -31,23 +31,19 @@
 
     <section class="actividad05">
         <h2 class="heading"><span>05</span> - Eventos en JavaScript</h2>
-        <h1>01 - Reacciones a Eventos</h1>
         <hr>
         <br>
         <br>
-
-        <div>
-            <h3>Click Listener</h3>
+        <div class="centered-div">
+            <h1>Click Listener</h1>
             <br>
-            <a class="btn btn-primary" href="./Actividad5/ej1.html" role="button">Probar</a>
-            <br>
+            <a class="btn btn-primary" href="./Actividad5/ej1.html" role="button">Probar actividad 01</a>
             <br>
             <br>
-        </div>
-        <div>
-            <h3>Lista de Propositos - To Do List</h3>
             <br>
-            <a class="btn btn-primary" href="./Actividad5/ej2.html" role="button">Probar</a>
+            <h1>Lista de Propositos - To Do List</h1>
+            <br>
+            <a class="btn btn-primary" href="./Actividad5/ej2.html" role="button">Probar actividad 02</a>
             <br>
             <br>
             <br>
