--- a/M06/Actividad5/ej2.html
+++ b/M06/Actividad5/ej2.html
@@ -30,44 +30,41 @@
     </header>
 
     <section class="actividad01">
-        <h2 class="heading"><span>05</span> - Eventos de JavaScript 1.2</h2>
+        <h2 class="heading"><span>05</span> - Actividad 1.2</h2>
         <br><br><br><br><br>
-        <div>
-            <h2>Lista de tareas - Propositos de Año Nuevo</h2>
-                        <hr>
-                        <br>
-                        <p>Añade propositos de año nuevo y cumplelos antes del 31 de Diciembre de 2023, ¡antes de las 12 de la noche!</p>
-                        <h1 id="cuentaAtras" class=""></h1>
-                        <br>
-                        <div class="todo">
-                            <section>
-                                <form id="form">
-                                    <p>
-                                        <label for="title">
-                                            <span>Nuevo Proposito<strong><abbr title="required">*</abbr></strong></span>
-                                            <input type="text" id="title" name="title"  />
-                                        </label>
-                                    </p>
-                                    <p>
-                                        <label for="content">
-                                            <span>Detalles </span>
-                                            <input type="text" id="content" name="content" />
-                                        </label>
-                                    </p>
-                                    <hr>
-                                    <p>
-                                        <button id="add-task" type="button">Añadir</button>
-                                    </p>
-                                </form>
-                            </section>
-                        </div>
-                        <div id="todos"></div>
+        <div style="text-align: center;">
+            <h2>Propositos de Año Nuevo: Añade propositos de año nuevo y cumplelos antes del 31 de Diciembre de 2023, ¡antes de las 12 de la noche!</h2>
+                <hr>
+                <br>
+                <h1 id="cuentaAtras" style="font-weight: 400;"></h1>
+                <br><br>
+                <div class="todo">
+                    <form id="form">
+                        <p>
+                            <label for="title">
+                            <h1><span>Nuevo Proposito<strong><abbr title="required">*</abbr></strong></span></h1>
+                                <input type="text" id="title" name="title" style="border: 2px solid #63c8e1; border-radius: 10px;" />
+                            </label>
+                        </p>
+                        <p>
+                            <label for="content">
+                                <h1><span>Detalles </span></h1>
+                                <input type="text" id="content" name="content" style="border: 2px solid #63c8e1; border-radius: 10px;"/>
+                            </label>
+                        </p>
+                        <br><br>
+                        <p>
+                            <button id="add-task" class="btn" type="button">Añadir</button>
+                        </p>
+                    </form><div id="todos"></div>
+                </div>
+                
         </div>
     </section>
 
 
-     <!--Footer-->
-     <footer class="footer">
+    <!--Footer-->
+    <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by Nara Jimenez Martos | All Rights Reserved.</p>
         </div>
